src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --background: 60 20% 96%;
    --foreground: 96 24% 7%;

    --card: 60 20% 96%;
    --card-foreground: 96 24% 7%;

    --popover: 60 20% 96%;
    --popover-foreground: 96 24% 7%;

    --primary: 116 57% 25%;
    --primary-foreground: 0 0% 100%;

    --secondary: 117 57% 24%;
    --secondary-foreground: 0 0% 100%;

    --muted: 60 20% 96%;
    --muted-foreground: 60 6% 88%;

    --accent: 60 100% 50%;
    --accent-foreground: 96 24% 7%;

    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 60 20% 96%;

    --border: 96 17% 37%;
    --input: 96 17% 37%;
    --ring: 116 57% 25%;

    --radius: 0.5rem;
  }

  .dark {
    --background: 96 24% 7%;
    --foreground: 60 20% 96%;

    --card: 96 24% 7%;
    --card-foreground: 60 20% 96%;

    --popover: 96 24% 7%;
    --popover-foreground: 60 20% 96%;

    --primary: 116 57% 25%;
    --primary-foreground: 0 0% 100%;

    --secondary: 117 57% 24%;
    --secondary-foreground: 0 0% 100%;

    --muted: 96 24% 7%;
    --muted-foreground: 60 6% 88%;

    --accent: 60 100% 50%;
    --accent-foreground: 96 24% 7%;

    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 60 20% 96%;

    --border: 96 17% 37%;
    --input: 96 17% 37%;
    --ring: 116 57% 25%;
  }
}

@layer base {
  * {
    @apply border-border;
  }

  body {
    @apply bg-background text-foreground;
  }
}

